1. Reduced width of the main titles to prevent text overlaps.
2.Updated the top-level red link banner to open a new tab when the user clicks.

--- a/assets/scss/common/_dark.scss
+++ b/assets/scss/common/_dark.scss
@@ -67,7 +67,16 @@ $navbar-dark-active-color: $link-color-dark;
   color: #f0f0f0;
 }
 
+[data-dark-mode] body .table__border{
+  border: 1px solid #f0f0f0;
+
+}
+
+
 [data-dark-mode] body .dates_text {
+  color: #f0f0f0 !important;
+}
+[data-dark-mode] body .gpu_sub_text {
   color: #f0f0f0 !important;
 }
 
